--- a/myfile.html
+++ b/myfile.html
@@ -16,8 +16,9 @@
       <article>
         <h1>День пятый. Хочу быть верстальщиком</h1>
         <p>Сегодня весь вечер просидел в интернете. Читал про преимущества работы верстальщиком. Часто отвлекался на видео с котиками, конечно, но кое-что я запомнил:</p>
-        <div class="square"></div>
         
+        <div class="blue-circle"></div>
+        <div class="red-square"></div>
         <ul>
 
         <li> ты делаешь полезное дело </li>
