--- a/myfile.html
+++ b/myfile.html
@@ -18,7 +18,8 @@
         <p>Сегодня весь вечер просидел в интернете. Читал про преимущества работы верстальщиком. Часто отвлекался на видео с котиками, конечно, но кое-что я запомнил:</p>
         
         <div class="blue-circle"></div>
-        <div class="red-square"></div>
+        <div class="red-square hide"></div>
+        
         <ul>
 
         <li> ты делаешь полезное дело </li>
