--- a/sugar.html
+++ b/sugar.html
@@ -8,16 +8,12 @@
 <body>
   <h1>Сахарный сайт</h1>
   <header>Виды C<sub>21</sub>H<sub>22</sub>O<sub>11</sub></header>
-  <dl>
-    <dt><strong>Рафинад</strong><img src="images/rafinad.jpg"></dt>
-    <dd>Очищенный сахар в кусках, изготовленный из сахарного песка</dd>
-    <dt><strong>Рассыпной сахар</strong><img src="images/saharrassipchatiy.jpg"></dt>
-    <dd>Кристаллизованная сахароза, пищевой продукт получаемый из свеклы</dd>
-    <dt><strong>Тростиниковый сахар</strong><img src="images/trostnikoviysahar.jpg"></dt>
-    <dd>Сахар, который получают из тростника</dd>
-    <dt><strong>Коричневый сахар</strong><img src="images/korichneviy sahar.jpg"></dt>
-    <dd>Рафинированный (тростниковый или свекольный) сахар, окрашенный мелассой</dd>
-  </dl>
+    <div id="slider">
+    <img src="images/rafinad.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
+    <img src="images/saharrassipchatiy.jpg" alt="Рассыпной сахар-Кристаллизованная сахароза, пищевой продукт получаемый из свеклы">
+    <img src="images/trostnikoviysahar.jpg" alt="Тростниковый сахар-сахар, который получают из тростника">
+    <img src="images/korichneviy sahar.jpg" alt="Коричневый сахар-рафинированный (тростниковый или свекольный) сахар, окрашенный мелассой">
+    </div>
   <script>
 
   </script>
