--- a/sugar.html
+++ b/sugar.html
@@ -9,13 +9,13 @@
   <h1>Сахарный сайт</h1>
   <header>Виды C<sub>21</sub>H<sub>22</sub>O<sub>11</sub></header>
     <div id="slider">
-    <img src="images/rafinad.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
-    <img src="images/saharrassipchatiy.jpg" alt="Рассыпной сахар-Кристаллизованная сахароза, пищевой продукт получаемый из свеклы">
-    <img src="images/trostnikoviysahar.jpg" alt="Тростниковый сахар-сахар, который получают из тростника">
-    <img src="images/korichneviysahar.jpg" alt="Коричневый сахар-рафинированный (тростниковый или свекольный) сахар, окрашенный мелассой">
+    <img src="images/1.jpg" width="100" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
+    <img src="images/2.jpg" width="100" alt="Рассыпной сахар-Кристаллизованная сахароза, пищевой продукт получаемый из свеклы">
+    <img src="images/3.jpg" width="100" alt="Тростниковый сахар-сахар, который получают из тростника">
+    <img src="images/4.jpg" width="100" alt="Коричневый сахар-рафинированный (тростниковый или свекольный) сахар, окрашенный мелассой">
     </div>
-  <script>
-
-  </script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="js/script.js"></script>
   <footer>Вот и сказочке конец</footer>
 </body>
+</html>
