--- a/sugar.html
+++ b/sugar.html
@@ -20,7 +20,7 @@
             <img src="images/1.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
           </div>
           <h5 class="product__title">
-            Сахар обыкновенный 1
+            Рафинад
           </h5>
           <p class="product__price">
             500 Рублей
@@ -29,10 +29,10 @@
   
         <div class="product product_red" id="product-1">
           <div class="product__image">
-            <img src="images/1.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
+            <img src="images/2.jpg" alt="Рассыпной сахар-Кристаллизованная сахароза, пищевой продукт получаемый из свеклы">
           </div>
           <h5 class="product__title">
-            Кенгуриный сахар
+            Рассыпной сахар
           </h5>
           <p class="product__price">
             3500 Рублей
@@ -41,10 +41,10 @@
   
         <div class="product product_blue" id="product-2">
           <div class="product__image">
-            <img src="images/1.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
+            <img src="images/3.jpg" alt="Тростниковый сахар-сахар, который получают из тростника">
           </div>
           <h5 class="product__title">
-            Сахар обыкновенный 2
+            Тростниковый сахар
           </h5>
           <p class="product__price">
             1500 Рублей
@@ -53,10 +53,10 @@
   
         <div class="product" id="product-3">
           <div class="product__image">
-            <img src="images/1.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
+            <img src="images/4.jpg" alt="Коричневый сахар-рафинированный (тростниковый или свекольный) сахар, окрашенный мелассой">
           </div>
           <h5 class="product__title">
-            Сахар обыкновенный 3
+            Коричневый сахар
           </h5>
           <p class="product__price">
             2500 Рублей
