--- a/sugar.html
+++ b/sugar.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="stylesheet" href="sugar.css">
   <title>Cайт сахара</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -25,6 +25,9 @@
           <p class="product__price">
             500 Рублей
           </p>
+          <p class="product_d">
+            Всем сахара
+          </p>
         </div>
   
         <div class="product product_red" id="product-1">
@@ -36,6 +39,9 @@
           </h5>
           <p class="product__price">
             3500 Рублей
+          </p>
+          <p class="product_d">
+            Куда без сахара
           </p>
         </div>
   
@@ -49,6 +55,9 @@
           <p class="product__price">
             1500 Рублей
           </p>
+          <p class="product_d">
+            Сахар что надо
+          </p>
         </div>
   
         <div class="product" id="product-3">
@@ -60,6 +69,9 @@
           </h5>
           <p class="product__price">
             2500 Рублей
+          </p>
+          <p class="product_d">
+            От сахара никуда не деться
           </p>
         </div>
   
@@ -73,6 +85,9 @@
           <p class="product__price">
             3500 Рублей
           </p>
+          <p class="product_d">
+            Такого сахара вы точно не пробовали
+          </p>
         </div>
   
         <div class="product product_red" id="product-5">
@@ -85,6 +100,9 @@
           <p class="product__price">
             4500 Рублей
           </p>
+          <p class="product_d">
+            Сахар хоть куда
+          </p>
         </div>
   
         <div class="product product_red" id="product-6">
@@ -96,6 +114,9 @@
           </h5>
           <p class="product__price">
             5500 Рублей
+          </p>
+          <p class="product_d">
+            Куда сахар, туда и мы
           </p>
         </div>
       </div>
