--- a/sugar.html
+++ b/sugar.html
@@ -23,7 +23,7 @@
             Рафинад
           </h5>
           <p class="product__price">
-            500 Рублей
+            100 Рублей
           </p>
           <p class="product_d">
             Всем сахара
@@ -38,7 +38,7 @@
             Рассыпной сахар
           </h5>
           <p class="product__price">
-            3500 Рублей
+            200 Рублей
           </p>
           <p class="product_d">
             Куда без сахара
@@ -53,7 +53,7 @@
             Тростниковый сахар
           </h5>
           <p class="product__price">
-            1500 Рублей
+            1000 Рублей
           </p>
           <p class="product_d">
             Сахар что надо
@@ -68,7 +68,7 @@
             Коричневый сахар
           </h5>
           <p class="product__price">
-            2500 Рублей
+            1500 Рублей
           </p>
           <p class="product_d">
             От сахара никуда не деться
@@ -83,7 +83,7 @@
             Соленый сахар
           </h5>
           <p class="product__price">
-            3500 Рублей
+            2500 Рублей
           </p>
           <p class="product_d">
             Такого сахара вы точно не пробовали
@@ -105,7 +105,7 @@
           </p>
         </div>
   
-        <div class="product product_red" id="product-6">
+        <div class="product product_green" id="product-6">
           <div class="product__image">
             <img src="images/1.jpg" alt="Рафинад-очищенный сахар в кусках, изготовленный из сахарного песка">
           </div>
@@ -121,13 +121,7 @@
         </div>
       </div>
     </div>
-    <!-- <div id="slider">
-    
-    <img src="images/2.jpg" width="100" alt="Рассыпной сахар-Кристаллизованная сахароза, пищевой продукт получаемый из свеклы">
-    <img src="images/3.jpg" width="100" alt="Тростниковый сахар-сахар, который получают из тростника">
-    <img src="images/4.jpg" width="100" alt="Коричневый сахар-рафинированный (тростниковый или свекольный) сахар, окрашенный мелассой">
-    </div> -->
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+   
   <script src="sugar.js"></script>
   <footer>Вот и сказочке конец</footer>
   <script></script>
