--- a/sugar.html
+++ b/sugar.html
@@ -25,7 +25,7 @@
           <p class="product__price">
             100 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             Всем сахара
           </p>
         </div>
@@ -40,7 +40,7 @@
           <p class="product__price">
             200 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             Куда без сахара
           </p>
         </div>
@@ -55,7 +55,7 @@
           <p class="product__price">
             1000 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             Сахар что надо
           </p>
         </div>
@@ -70,7 +70,7 @@
           <p class="product__price">
             1500 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             От сахара никуда не деться
           </p>
         </div>
@@ -85,7 +85,7 @@
           <p class="product__price">
             2500 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             Такого сахара вы точно не пробовали
           </p>
         </div>
@@ -100,7 +100,7 @@
           <p class="product__price">
             4500 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             Сахар хоть куда
           </p>
         </div>
@@ -115,7 +115,7 @@
           <p class="product__price">
             5500 Рублей
           </p>
-          <p class="product_d">
+          <p class="product__description">
             Куда сахар, туда и мы
           </p>
         </div>
