--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -36,9 +36,13 @@
         // }
         debugger;
         const numbers = [3, 5, 4, 6];
+        let sum=0
         for (let i=0; i<numbers.length; i++){
-            console.log(numbers[i])
+            sum+=numbers[i]
+            // console.log(numbers[i])
+
         }
+       
 
         </script>
     </body>
