Задание условный оператор

--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -46,10 +46,14 @@
     //         sum+=value
     //     })
     //    alert(sum);
-  
-for ( let i=0; i<4; i=i+2) {
-    alert (i);
+    let sum=0;
+for ( let i=0; i<=8; i=i+2) {
+    debugger
+    sum+=i;
 }
+alert (sum);
+   
+
 
     
 
