Условный оператор if

--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -46,13 +46,21 @@
     //         sum+=value
     //     })
     //    alert(sum);
-    let sum=0;
-for ( let i=0; i<=8; i=i+2) {
-    debugger
-    sum+=i;
-}
-alert (sum);
+
+//     let sum=0;
+// for ( let i=0; i<=8; i=i+2) {
+//     sum+=i;
+// }
+// alert (sum);
    
+let name = prompt('Какое официальное название JavaScript?','')
+if (name=='ECMAScript') {
+    alert ('Правильно!');
+}
+else {
+    alert ('Ты не знал? ECMAScript!');
+}
+
 
 
     
