--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -53,18 +53,53 @@
 // }
 // alert (sum);
    
-let name = prompt('Какое официальное название JavaScript?','')
-if (name=='ECMAScript') {
-    alert ('Правильно!');
-}
-else {
-    alert ('Ты не знал? ECMAScript!');
-}
+// let name = prompt('Какое официальное название JavaScript?','')
+// if (name=='ECMAScript') {
+//     alert ('Правильно!');
+// }
+// else {
+//     alert ('Ты не знал? ECMAScript!');
+// }
+// debugger
+// let numbers=[4, 6, 54, 3, 333, 87192, 91232314];
+// let sum=0
 
-
-
+// for (let i=0; i<=numbers.length; i++) 
+// if (i % 2 == 0) 
+    
+//     sum+=numbers[i];
     
 
-        </script>
+// alert(sum);
+
+
+
+// function plusuyem (a,b)   { 
+// debugger
+// return a + b; 
+// }
+// plusuyem (4,6);
+
+// function minusuyem (a,b) {
+//     debugger
+//     return a-b
+// }
+// minusuyem (10,2)
+
+// function umnojeniye(a,b) {
+// debugger
+// return a * b
+// }
+// umnojeniye;
+
+function deleniye(a,b) {
+    debugger 
+    return a/b
+}
+
+deleniye
+
+
+      </script>
     </body>
 </html>
