--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -60,16 +60,19 @@
 // else {
 //     alert ('Ты не знал? ECMAScript!');
 // }
-// debugger
-// let numbers=[4, 6, 54, 3, 333, 87192, 91232314];
+
+// debugger;
+// let numbers=[24, 32, 32, 32];
 // let sum=0
 
-// for (let i=0; i<=numbers.length; i++) 
-// if (i % 2 == 0) 
+// for (let i=0; i < numbers.length; i++) {
+//     const elem = numbers[i];
+//     if (elem % 2 != 0) {
+//         sum += elem;
+//     }
+// }
     
-//     sum+=numbers[i];
-    
-
+// debugger
 // alert(sum);
 
 
@@ -90,14 +93,18 @@
 // debugger
 // return a * b
 // }
-// umnojeniye;
+// umnojeniye(10,2);
 
-function deleniye(a,b) {
-    debugger 
-    return a/b
-}
+// function deleniye(a,b) {
+//     debugger 
+//     return a/b
+// }
 
-deleniye
+// deleniye(10,2)
+
+// function trichisla(arg1,arg2,arg3){
+// // let massiv=[trichisla];
+// trichisla(1,2,3)}
 
 
       </script>
