--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -102,9 +102,54 @@
 
 // deleniye(10,2)
 
-// function trichisla(arg1,arg2,arg3){
-// // let massiv=[trichisla];
-// trichisla(1,2,3)}
+
+
+
+// debugger
+// let numbers=[60, 0, 30, 3, 28];
+// let sum=0;
+
+// for (let i=0; i < numbers.length; i++) {
+//     sum+=numbers[i];
+//     const elem = numbers[i];
+//     if (elem % 3 == 0) {
+//         sum -= elem;
+//     }
+// }
+    
+// alert(sum);
+
+
+
+
+// debugger
+// function trichisla (a,b,c) {
+ 
+// }
+// trichisla (10,2,30);
+
+// let boom = [trichisla];
+
+// alert(boom[0]);
+// alert(boom[1]);
+// alert(boom[2]);
+
+
+
+// debugger
+function trichisla (a,b,c) {
+ 
+}
+trichisla (10,2,30);
+let boom=[trichisla];
+let sum=0;
+for (let i=0; i<trichisla.length; i++) {
+    sum+=boom[i]
+}
+alert(sum);
+
+
+    
 
 
       </script>
