--- a/js-examples/index.html
+++ b/js-examples/index.html
@@ -122,31 +122,16 @@
 
 
 
-// debugger
-// function trichisla (a,b,c) {
- 
-// }
-// trichisla (10,2,30);
-
-// let boom = [trichisla];
-
-// alert(boom[0]);
-// alert(boom[1]);
-// alert(boom[2]);
-
-
-
-// debugger
-function trichisla (a,b,c) {
- 
-}
-trichisla (10,2,30);
-let boom=[trichisla];
+debugger
+let number=[3,4,5];
 let sum=0;
-for (let i=0; i<trichisla.length; i++) {
-    sum+=boom[i]
+function trichisla ([number]) {
+    }
+
+for (let i=0; i<number.length; i++) {
+    sum+=number[i];
 }
-alert(sum);
+return(sum);
 
 
     
