--- a/css-examples/flex.html
+++ b/css-examples/flex.html
@@ -1,37 +1,42 @@
 <html>
-    <head>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="style.css"/>
-     </head>
-         <body>
-             <header>ThriveTalk Landing Page</header>
-            <div class="firstpage">
-                
-             <div class="theword">
-                <img src="imagesfor/Thrivetalk.jpg" alt=""></a>
-             </div>
-             <div class="about">
-                 <img src="imagesfor/second.svg" alt=""></a>
-             </div>
-             <div class="contactus">
-             <img src="imagesfor/contactus.jpg" alt=""></a>
-              </div>
-             <div class="theword">
-             <img src="imagesfor/Thrivetalk.jpg" alt=""></a>
-                </div>
-             </div>
-             
-             <p class="helpingyou">
-                    <img src="imagesfor/HELPING YOU THRIVE IN ALL AREAS OF LIFE.svg" alt=""></a>
-             </p>
-             <p class="higlytalented">
-                    <img src="imagesfor/Our highly talented therapists can help you with a range of issues including relationships, sex, PTSD, depression, social anxiety, or even just caring for yourself more..svg"></a>
-             </p>
-             <p class="childhoodfoto">
-             </p>
-               <div class="parent-container">
-                    <div id="blue-circle" class='all'></div>
-                </div> 
-            </div>
-            </body>
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <header>ThriveTalk Landing Page</header>
+    <div class="firstpage">
+
+        <div class="theword">
+            <span>Thrivetalk</span>
+            <span>Thrivetalk</span>
+        </div>
+        <div class="about">
+            <img src="imagesfor/second.svg" alt=""></a>
+        </div>
+        <div class="contactus">
+            <img src="imagesfor/contactus.jpg" alt=""></a>
+        </div>
+        <div class="theword">
+            <img src="imagesfor/Thrivetalk.jpg" alt=""></a>
+        </div>
+    </div>
+
+    <p class="helpingyou">
+        <img src="imagesfor/HELPING YOU THRIVE IN ALL AREAS OF LIFE.svg" alt=""></a>
+    </p>
+    <p class="higlytalented">
+        <img
+            src="imagesfor/Our highly talented therapists can help you with a range of issues including relationships, sex, PTSD, depression, social anxiety, or even just caring for yourself more..svg"></a>
+    </p>
+    <p class="childhoodfoto">
+    </p>
+    <div class="parent-container">
+        <div id="blue-circle" class='all'></div>
+    </div>
+    </div>
+</body>
+
 </html>
