--- a/css-examples/flex.html
+++ b/css-examples/flex.html
@@ -6,37 +6,21 @@
 </head>
 
 <body>
-    <header>ThriveTalk Landing Page</header>
-    <div class="firstpage">
+    <header></header>
+    <div class="phraseone">
+        <span>Why Thrive?</span>
+    </div>
+    <div class="phrasetwo">
+        <span>Want to improve your well-being from the comfort of your own couch? Are you having trouble finding the
+            right therapist?
+            Here at ThriveTalk, our licensed therapists provide the same quality care you would get in office from
+            anywhere you can
+            access your laptop or mobile phone. Become your best self with ThriveTalk. Start therapy now with a
+            licensed therapist!</span>
+    </div>
+    <!-- <div class="photo"> </div> -->
 
-        <div class="theword">
-            <span>Thrivetalk</span>
-            <span>Thrivetalk</span>
-        </div>
-        <div class="about">
-            <img src="imagesfor/second.svg" alt=""></a>
-        </div>
-        <div class="contactus">
-            <img src="imagesfor/contactus.jpg" alt=""></a>
-        </div>
-        <div class="theword">
-            <img src="imagesfor/Thrivetalk.jpg" alt=""></a>
-        </div>
-    </div>
 
-    <p class="helpingyou">
-        <img src="imagesfor/HELPING YOU THRIVE IN ALL AREAS OF LIFE.svg" alt=""></a>
-    </p>
-    <p class="higlytalented">
-        <img
-            src="imagesfor/Our highly talented therapists can help you with a range of issues including relationships, sex, PTSD, depression, social anxiety, or even just caring for yourself more..svg"></a>
-    </p>
-    <p class="childhoodfoto">
-    </p>
-    <div class="parent-container">
-        <div id="blue-circle" class='all'></div>
-    </div>
-    </div>
 </body>
 
 </html>
