--- a/css-examples/flex.html
+++ b/css-examples/flex.html
@@ -18,7 +18,9 @@
             access your laptop or mobile phone. Become your best self with ThriveTalk. Start therapy now with a
             licensed therapist!</span>
     </div>
-    <!-- <div class="photo"> </div> -->
+    <div class="photo">
+        <img src="imagesfor/christopher-campbell-40367.svg">;
+    </div>
 
 
 </body>
