--- a/css-examples/flex.html
+++ b/css-examples/flex.html
@@ -8,18 +8,27 @@
 <body>
     <header></header>
     <div class="phraseone">
-        <span>Why Thrive?</span>
+        <span>ABOUT US</span>
     </div>
     <div class="phrasetwo">
-        <span>Want to improve your well-being from the comfort of your own couch? Are you having trouble finding the
-            right therapist?
-            Here at ThriveTalk, our licensed therapists provide the same quality care you would get in office from
-            anywhere you can
-            access your laptop or mobile phone. Become your best self with ThriveTalk. Start therapy now with a
-            licensed therapist!</span>
+        <span>We want to help you thrive! Whether you are just looking for someone to talk to, or are struggling with a
+            mental
+            wellness issue we’re here to help. Our highly talented therapists can help you with a range of issues
+            including
+            relationships, sex, PTSD, depression, social anxiety, or even just caring for yourself more.</span>
     </div>
-    <div class="photo">
-        <img src="imagesfor/christopher-campbell-40367.svg">;
+    <div class="phrasethree">
+        <span>WE CAN HELP YOU WITH</span>
+    </div>
+    <div class="pinksquare"> </div>
+    <div class="one">
+        <span>Weight Lifting</span>
+    </div>
+
+    <div class="greensquare"></div>
+    <div class="azuresquare"></div>
+    <div class="bluesquare"></div>
+
     </div>
 
 
